k8s/book-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-deployment
  labels:
    app: book-app
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: book-app
  template:
    metadata:
      labels:
        app: book-app
    spec:
      containers:
      - name: book-container
        image: kangmartin/book-service:1 
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"

        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
