k8s/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: library-front
  template:
    metadata:
      labels:
        app: library-front
    spec:
      containers:
      - name: front-container
        image: kangmartin/library-front:latest
        ports:
        - containerPort: 80
