k8s/book-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-service
spec:
  selector:
    app: book-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
