k8s/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: library-front
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
