k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: library.local
    http:
      paths:
      # Priorité à l'API
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: book-service
            port:
              number: 80

      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: front-service
            port:
              number: 80
